全站登入權限控制修改中

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Shared/CatCha_Layout.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Shared/CatCha_Layout.cshtml
@@ -67,25 +67,31 @@
                         <li class="nav-item"><a class="nav-link" asp-controller="About" asp-action="About">關於我們</a></li>
                         <li class="nav-item"><a class="nav-link" asp-controller="Membership" asp-action="Membership">會員中心</a></li>
                         <!-- Mobile view .attr-nav -->
-                        <ul class="d-flex d-lg-none justify-content-evenly">
-                            <li class="heart">
-                                <a asp-controller="Membership" asp-action="Membership">
-                                    <i class="fa-regular fa-heart"></i>
-                                    <span class="customRule for_header_twoIcon">3</span>
-                                </a>
-                            </li>
-                            <li class="side-menu">
-                                <a asp-controller="Cart" asp-action="Cart">
-                                    <i class="fa-solid fa-cart-plus"></i>
-                                    <span class="customRule for_header_twoIcon">3</span>
-                                </a>
-                            </li>
-                            <li class="Login">
-                                <a asp-controller="MemberLogin" asp-action="Login">
-                                    <span class="LoginText">登入/註冊</span>
-                                </a>
-                            </li>
-                        </ul>
+                       
+                    </ul>
+                    <ul class="d-flex d-lg-none justify-content-evenly">
+                        <li class="heart">
+                            <a asp-controller="Membership" asp-action="Membership">
+                                <i class="fa-regular fa-heart"></i>
+                                <span class="customRule for_header_twoIcon">3</span>
+                            </a>
+                        </li>
+                        <li class="side-menu">
+                            <a asp-controller="Cart" asp-action="Cart">
+                                <i class="fa-solid fa-cart-plus"></i>
+                                <span class="customRule for_header_twoIcon">3</span>
+                            </a>
+                        </li>
+                        <li class="Login">
+                            <a asp-controller="MemberLogin" asp-action="Login">
+                                <span class="LoginText">登入/註冊</span>
+                            </a>
+                        </li>
+                        <li class="Login">
+                            <a asp-controller="Index" asp-action="Index">
+                                <span class="Logout">登出</span>
+                            </a>
+                        </li>
                     </ul>
                 </div>
 
@@ -107,6 +113,11 @@
                         <li class="Login">
                             <a id="loginLink" asp-controller="MemberLogin" asp-action="Login">
                                 <span class="LoginText">登入/註冊</span>
+                            </a>
+                        </li>
+                        <li class="Logout" style="display: none;">
+                            <a asp-controller="Index" asp-action="Index" >
+                                <span class="LogoutText">登出</span>
                             </a>
                         </li>
                     </ul>
@@ -217,3 +228,46 @@
 
 </body>
 </html>
+
+@section Scripts{
+<script>
+    //TODO 寫在這邊不行?
+
+        //右上角登入/註冊字樣切換功能(登入後會出現" Hello,xxx")
+        const targetloginTextClass = 'LoginText';
+        const logoutcontainer = 'Logout';
+        const loginLink = document.getElementById('loginLink');
+        const targetElements = document.querySelectorAll(`.${targetloginTextClass}`);
+        const logoutElements = document.querySelectorAll(`.${logoutcontainer}`);
+        //取得使用者名稱API
+        function loginAndGetName() {
+            $.ajax({
+                url: '/api/GetUserName/',
+                contentType: 'application/json',
+                type: 'GET',
+                success: function (data) {
+                    if (data.includes('Hello')) {
+                        targetElements.forEach(element => {
+                            element.textContent = `${data}`;
+                        });
+                        loginLink.href = '/Membership/Membership';
+                        //讓登出按鈕出現
+                        logoutElements.forEach(element => {
+                            element.style.display = 'block';
+                        });
+                    }
+                },
+                error: function () {
+                    console.error('登入失敗');
+                }
+            });
+        }
+        loginAndGetName();//載入頁面時檢查
+
+
+
+</script>
+
+
+
+}
