新增-轉蛋貓幣 移除-轉蛋背景家具

--- a/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
+++ b/slnjCatChaOnlineShop/prjCatChaOnlineShop/Views/Game/Index.cshtml
@@ -11,7 +11,6 @@
 }
 
 <!-- Start 遊戲畫面 -->
-
 <div class="canvas-container" @*style="display:none;"*@>
     <div class="gamelayer">
         <canvas id="Canvaslobby"></canvas>
@@ -97,7 +96,6 @@
         <button id="commonbackBTN" style="top:20px !important;" onclick="pagesControl(Canvaslobby)"></button>
         <div id="rank-container">
             <div id="rankpage-title">小遊戲排行榜</div>
-
             <table id="emTable" class="table table-striped">
                 <thead>
                     <tr>
@@ -134,7 +132,7 @@
     <button id="registerButton">註冊</button>
 </div>
 
-<button type="submit" id="testDBlogin">測試資料庫登入</button>
+<button type="submit" id="testDBlogin"style="display:none">測試資料庫登入</button>
 
 <!-- End 遊戲畫面 -->
 <!-- 遊戲相關js -->
